# flask-walking-skeleton

./: .dockerignore  .gitignore  DjangoDockerfile  Dockerfile  docker-compose.yml
.github/workflows/: deply-image-to-ecr.yml  destroy_pipelines.yml  run-flask-tests.yml
flask-api/: README.md  pyproject.toml
flask-api/flask_api/: __init__.py
flask-api/flask_api/templates/: index.html  sum_of_prime_numbers.html
flask-api/flask_api/views/: fetch_host.py  fibonacci.py  fizzbuzz.py  hello_world.py  palindrome.py  prime_number.py
flask-api/tests/: conftest.py  test_app.py  test_fibonacci.py  test_fizzbuzz.py  test_get_fibonacci.py  test_get_fizzbuzz.py  test_get_prime.py  test_palindrome.py  test_prime.py
scripts/: django_run.sh
terraform/: backend.tf  ecs.tf  locals.tf  main.tf  output.tf  provider.tf  variables.tf
terraform/modules/aws_custom_vpc/: gateways.tf  main.tf  outputs.tf  route_tables.tf  subnets.tf  variables.tf
terraform/modules/aws_ecr/: iam.tf  main.tf  outputs.tf  variables.tf
terraform/modules/aws_ecs/: iam_policy.tf  kms.tf  log_groups.tf  main.tf  policy.tf  security_groups.tf  variables.tf
terraform/modules/aws_ecs/templates/: ecs_task_definitions.json
terraform/modules/aws_ecs/templates/ecs/: container-definition.json.tpl
terraform/modules/aws_load_balancer/: launch_template.tf  main.tf  outputs.tf  security_groups.tf  variables.tf
